[project]
name = "langchain-rag-react-agent"
version = "0.1.0"
description = "Advanced RAG-based ReAct Agent with PDF processing, OCR, and multimodal support"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "SystemSolution21", email = "systemsolution21@gmail.com" }
]
license = { text = "MIT" }
keywords = ["langchain", "rag", "react-agent", "pdf", "ocr", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.3.15,<1.0.0",
    "langchain-community>=0.3.15,<1.0.0",
    "langchain-ollama>=0.2.3",
    "langchain-chroma>=0.2.2",
    "langchain-huggingface>=0.3.1",
    "python-dotenv>=1.0.1",
    "chromadb>=0.6.3",
    "sentence-transformers>=5.1.0",
    "aioconsole>=0.8.1",
    "pypdf>=6.2.0",
    "fitz>=0.0.1.dev2",
    "pytesseract>=0.3.13",
    "opencv-python>=4.12.0.88",
    "unstructured>=0.18.18",
    "pdfminer-six>=20251107",
    "pdf2image>=1.17.0",
    "rich>=14.0.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "black>=24.0.0",
    "mypy>=1.8.0",
]

[project.scripts]
langchain-rag-agent = "langchain_rag_react_agent.agent:main"
setup-models = "langchain_rag_react_agent.scripts.setup_models:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_rag_react_agent"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

